--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
 # Environments
 .env
 .venv
-env/
+*env/
 venv/
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+reports/
