--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,3 +3,8 @@ coverage~=5.5
 pytest~=6.2.5
 pytest-cov~=2.12.1
 mockito~=1.2.2
+Jinja2~=3.0.3
+Flask~=2.0.3
+itsdangerous==2.0.1
+Werkzeug==2.0.3
+
