--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,12 +14,11 @@ jobs:
         uses: actions/checkout@v3
 
       # Authenticate to Google Cloud
-      - name: Authenticate to Google Cloud
-        env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        run: |
-          echo "$GOOGLE_CREDENTIALS" > /tmp/google-credentials.json
-          gcloud auth activate-service-account --key-file=/tmp/google-credentials.json
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
       # Build and push Docker image
       - name: Build and push Docker image
