--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
           CONTAINER_IMAGE_URL: ${{ secrets.CONTAINER_IMAGE_URL }}
           GCLOUD_REGION: ${{ secrets.GCLOUD_REGION }}
         run: |
-          gcloud auth configure-docker $GCLOUD_REGION
+          gcloud auth configure-docker us-docker.pkg.dev
           docker build -t $CONTAINER_IMAGE_URL:latest .
           docker push $CONTAINER_IMAGE_URL:latest
 
@@ -68,6 +68,10 @@ jobs:
       # Set STRESS_URL environment variable for later use
       - name: Set STRESS_URL as env variable to use later the Makefile
         run: echo "STRESS_URL=${{ steps.deploy.outputs.url }}" >> $GITHUB_ENV
+
+      # Run training script to have the model available
+      - name: Run training script
+        run: python challenge/training.py
 
       # Run stress tests
       - name: Run stress tests
