--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -69,6 +69,12 @@ jobs:
       - name: Set STRESS_URL as env variable to use later the Makefile
         run: echo "STRESS_URL=${{ steps.deploy.outputs.url }}" >> $GITHUB_ENV
 
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt -r requirements-dev.txt -r requirements-test.txt
+
       # Run training script to have the model available
       - name: Run training script
         run: python challenge/training.py
