--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -76,6 +76,12 @@ jobs:
             --format="value(status.url)")
           echo "::set-output name=url::$URL"
           echo "Image URL: $URL"
+      
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt -r requirements-test.txt
 
       # Set STRESS_URL environment variable for later use
       - name: Set STRESS_URL as env variable to use later the Makefile
