Removed training script no longer needed

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,9 @@
 name: 'Continuous Delivery'
 
 on:
-  pull_request: #TODO: For testing
+  pull_request:
     branches:
-      - "develop"
+      - "main"
 
 jobs:
   build:
